--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "npm-check": "^5.9.2"
+    "npm-check": "^5.9.2",
+    "validator": "^13.5.2"
   }
 }
