--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/brendapc/backend-bootcamp#readme",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.27",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
@@ -40,6 +41,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "npm-check": "^5.9.2",
     "validator": "^13.5.2"
   }
