--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/jest": "^26.0.20",
     "@types/mongodb": "^3.6.7",
     "@types/node": "^14.14.27",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "eslint": "^7.19.0",
     "eslint-config-standard-with-typescript": "^11.0.0",
@@ -41,6 +42,7 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "sucrase": "^3.17.1",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
