--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "fast-glob": "^3.2.5",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.4",
     "npm-check": "^5.9.2",
     "validator": "^13.5.2"
